kadai2/src/y.output
   0  $accept : program $end

   1  program : PROGRAM IDENT SEMICOLON outblock PERIOD

   2  outblock : var_decl_part subprog_decl_part statement

   3  var_decl_part :
   4                | var_decl_list SEMICOLON

   5  var_decl_list : var_decl_list SEMICOLON var_decl
   6                | var_decl

   7  var_decl : VAR id_list

   8  subprog_decl_part : subprog_decl_list SEMICOLON
   9                    |

  10  subprog_decl_list : subprog_decl_list SEMICOLON subprog_decl
  11                    | subprog_decl

  12  subprog_decl : proc_decl

  13  proc_decl : PROCEDURE proc_name SEMICOLON inblock

  14  proc_name : IDENT

  15  inblock : var_decl_part statement

  16  statement_list : statement_list SEMICOLON statement
  17                 | statement

  18  statement : assignment_statement
  19            | if_statement
  20            | while_statement
  21            | for_statement
  22            | proc_call_statement
  23            | null_statement
  24            | block_statement
  25            | read_statement
  26            | write_statement

  27  assignment_statement : IDENT ASSIGN expression

  28  if_statement : IF condition THEN statement else_statement

  29  else_statement : ELSE statement
  30                 |

  31  while_statement : WHILE condition DO statement

  32  for_statement : FOR IDENT ASSIGN expression TO expression DO statement

  33  proc_call_statement : proc_call_name

  34  proc_call_name : IDENT

  35  block_statement : SBEGIN statement_list SEND

  36  read_statement : READ LPAREN IDENT RPAREN

  37  write_statement : WRITE LPAREN expression RPAREN

  38  null_statement :

  39  condition : expression EQ expression
  40            | expression NEQ expression
  41            | expression LT expression
  42            | expression LE expression
  43            | expression GT expression
  44            | expression GE expression

  45  expression : term
  46             | PLUS term
  47             | MINUS term
  48             | expression PLUS term
  49             | expression MINUS term

  50  term : factor
  51       | term MULT factor
  52       | term DIV factor

  53  factor : var_name
  54         | NUMBER
  55         | LPAREN expression RPAREN

  56  var_name : IDENT

  57  id_list : IDENT
  58          | id_list COMMA IDENT

state 0
	$accept : . program $end  (0)

	PROGRAM  shift 1
	.  error

	program  goto 2


state 1
	program : PROGRAM . IDENT SEMICOLON outblock PERIOD  (1)

	IDENT  shift 3
	.  error


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : PROGRAM IDENT . SEMICOLON outblock PERIOD  (1)

	SEMICOLON  shift 4
	.  error


state 4
	program : PROGRAM IDENT SEMICOLON . outblock PERIOD  (1)
	var_decl_part : .  (3)

	VAR  shift 5
	SBEGIN  reduce 3
	FOR  reduce 3
	IF  reduce 3
	PROCEDURE  reduce 3
	READ  reduce 3
	WHILE  reduce 3
	WRITE  reduce 3
	PERIOD  reduce 3
	IDENT  reduce 3

	outblock  goto 6
	var_decl_part  goto 7
	var_decl_list  goto 8
	var_decl  goto 9


state 5
	var_decl : VAR . id_list  (7)

	IDENT  shift 10
	.  error

	id_list  goto 11


state 6
	program : PROGRAM IDENT SEMICOLON outblock . PERIOD  (1)

	PERIOD  shift 12
	.  error


state 7
	outblock : var_decl_part . subprog_decl_part statement  (2)
	subprog_decl_part : .  (9)

	PROCEDURE  shift 13
	SBEGIN  reduce 9
	FOR  reduce 9
	IF  reduce 9
	READ  reduce 9
	WHILE  reduce 9
	WRITE  reduce 9
	PERIOD  reduce 9
	IDENT  reduce 9

	subprog_decl_part  goto 14
	subprog_decl_list  goto 15
	subprog_decl  goto 16
	proc_decl  goto 17


state 8
	var_decl_part : var_decl_list . SEMICOLON  (4)
	var_decl_list : var_decl_list . SEMICOLON var_decl  (5)

	SEMICOLON  shift 18
	.  error


state 9
	var_decl_list : var_decl .  (6)

	.  reduce 6


state 10
	id_list : IDENT .  (57)

	.  reduce 57


state 11
	var_decl : VAR id_list .  (7)
	id_list : id_list . COMMA IDENT  (58)

	COMMA  shift 19
	SEMICOLON  reduce 7


state 12
	program : PROGRAM IDENT SEMICOLON outblock PERIOD .  (1)

	.  reduce 1


state 13
	proc_decl : PROCEDURE . proc_name SEMICOLON inblock  (13)

	IDENT  shift 20
	.  error

	proc_name  goto 21


state 14
	outblock : var_decl_part subprog_decl_part . statement  (2)
	null_statement : .  (38)

	SBEGIN  shift 22
	FOR  shift 23
	IF  shift 24
	READ  shift 25
	WHILE  shift 26
	WRITE  shift 27
	IDENT  shift 28
	PERIOD  reduce 38

	statement  goto 29
	assignment_statement  goto 30
	if_statement  goto 31
	while_statement  goto 32
	for_statement  goto 33
	proc_call_statement  goto 34
	null_statement  goto 35
	block_statement  goto 36
	read_statement  goto 37
	write_statement  goto 38
	proc_call_name  goto 39


state 15
	subprog_decl_part : subprog_decl_list . SEMICOLON  (8)
	subprog_decl_list : subprog_decl_list . SEMICOLON subprog_decl  (10)

	SEMICOLON  shift 40
	.  error


state 16
	subprog_decl_list : subprog_decl .  (11)

	.  reduce 11


state 17
	subprog_decl : proc_decl .  (12)

	.  reduce 12


state 18
	var_decl_part : var_decl_list SEMICOLON .  (4)
	var_decl_list : var_decl_list SEMICOLON . var_decl  (5)

	VAR  shift 5
	SBEGIN  reduce 4
	FOR  reduce 4
	IF  reduce 4
	PROCEDURE  reduce 4
	READ  reduce 4
	WHILE  reduce 4
	WRITE  reduce 4
	SEMICOLON  reduce 4
	PERIOD  reduce 4
	IDENT  reduce 4

	var_decl  goto 41


state 19
	id_list : id_list COMMA . IDENT  (58)

	IDENT  shift 42
	.  error


state 20
	proc_name : IDENT .  (14)

	.  reduce 14


state 21
	proc_decl : PROCEDURE proc_name . SEMICOLON inblock  (13)

	SEMICOLON  shift 43
	.  error


state 22
	block_statement : SBEGIN . statement_list SEND  (35)
	null_statement : .  (38)

	SBEGIN  shift 22
	FOR  shift 23
	IF  shift 24
	READ  shift 25
	WHILE  shift 26
	WRITE  shift 27
	IDENT  shift 28
	SEND  reduce 38
	SEMICOLON  reduce 38

	statement  goto 44
	statement_list  goto 45
	assignment_statement  goto 30
	if_statement  goto 31
	while_statement  goto 32
	for_statement  goto 33
	proc_call_statement  goto 34
	null_statement  goto 35
	block_statement  goto 36
	read_statement  goto 37
	write_statement  goto 38
	proc_call_name  goto 39


state 23
	for_statement : FOR . IDENT ASSIGN expression TO expression DO statement  (32)

	IDENT  shift 46
	.  error


state 24
	if_statement : IF . condition THEN statement else_statement  (28)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 52
	condition  goto 53
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 25
	read_statement : READ . LPAREN IDENT RPAREN  (36)

	LPAREN  shift 57
	.  error


state 26
	while_statement : WHILE . condition DO statement  (31)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 52
	condition  goto 58
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 27
	write_statement : WRITE . LPAREN expression RPAREN  (37)

	LPAREN  shift 59
	.  error


state 28
	assignment_statement : IDENT . ASSIGN expression  (27)
	proc_call_name : IDENT .  (34)

	ASSIGN  shift 60
	ELSE  reduce 34
	SEND  reduce 34
	SEMICOLON  reduce 34
	PERIOD  reduce 34


state 29
	outblock : var_decl_part subprog_decl_part statement .  (2)

	.  reduce 2


state 30
	statement : assignment_statement .  (18)

	.  reduce 18


state 31
	statement : if_statement .  (19)

	.  reduce 19


state 32
	statement : while_statement .  (20)

	.  reduce 20


state 33
	statement : for_statement .  (21)

	.  reduce 21


state 34
	statement : proc_call_statement .  (22)

	.  reduce 22


state 35
	statement : null_statement .  (23)

	.  reduce 23


state 36
	statement : block_statement .  (24)

	.  reduce 24


state 37
	statement : read_statement .  (25)

	.  reduce 25


state 38
	statement : write_statement .  (26)

	.  reduce 26


state 39
	proc_call_statement : proc_call_name .  (33)

	.  reduce 33


state 40
	subprog_decl_part : subprog_decl_list SEMICOLON .  (8)
	subprog_decl_list : subprog_decl_list SEMICOLON . subprog_decl  (10)

	PROCEDURE  shift 13
	SBEGIN  reduce 8
	FOR  reduce 8
	IF  reduce 8
	READ  reduce 8
	WHILE  reduce 8
	WRITE  reduce 8
	PERIOD  reduce 8
	IDENT  reduce 8

	subprog_decl  goto 61
	proc_decl  goto 17


state 41
	var_decl_list : var_decl_list SEMICOLON var_decl .  (5)

	.  reduce 5


state 42
	id_list : id_list COMMA IDENT .  (58)

	.  reduce 58


state 43
	proc_decl : PROCEDURE proc_name SEMICOLON . inblock  (13)
	var_decl_part : .  (3)

	VAR  shift 5
	SBEGIN  reduce 3
	FOR  reduce 3
	IF  reduce 3
	READ  reduce 3
	WHILE  reduce 3
	WRITE  reduce 3
	SEMICOLON  reduce 3
	IDENT  reduce 3

	var_decl_part  goto 62
	var_decl_list  goto 8
	var_decl  goto 9
	inblock  goto 63


state 44
	statement_list : statement .  (17)

	.  reduce 17


state 45
	statement_list : statement_list . SEMICOLON statement  (16)
	block_statement : SBEGIN statement_list . SEND  (35)

	SEND  shift 64
	SEMICOLON  shift 65
	.  error


state 46
	for_statement : FOR IDENT . ASSIGN expression TO expression DO statement  (32)

	ASSIGN  shift 66
	.  error


state 47
	expression : PLUS . term  (46)

	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	term  goto 67
	factor  goto 55
	var_name  goto 56


state 48
	expression : MINUS . term  (47)

	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	term  goto 68
	factor  goto 55
	var_name  goto 56


state 49
	factor : LPAREN . expression RPAREN  (55)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 69
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 50
	factor : NUMBER .  (54)

	.  reduce 54


state 51
	var_name : IDENT .  (56)

	.  reduce 56


state 52
	condition : expression . EQ expression  (39)
	condition : expression . NEQ expression  (40)
	condition : expression . LT expression  (41)
	condition : expression . LE expression  (42)
	condition : expression . GT expression  (43)
	condition : expression . GE expression  (44)
	expression : expression . PLUS term  (48)
	expression : expression . MINUS term  (49)

	PLUS  shift 70
	MINUS  shift 71
	EQ  shift 72
	NEQ  shift 73
	LE  shift 74
	LT  shift 75
	GE  shift 76
	GT  shift 77
	.  error


state 53
	if_statement : IF condition . THEN statement else_statement  (28)

	THEN  shift 78
	.  error


state 54
	expression : term .  (45)
	term : term . MULT factor  (51)
	term : term . DIV factor  (52)

	MULT  shift 79
	DIV  shift 80
	DO  reduce 45
	ELSE  reduce 45
	SEND  reduce 45
	THEN  reduce 45
	TO  reduce 45
	PLUS  reduce 45
	MINUS  reduce 45
	EQ  reduce 45
	NEQ  reduce 45
	LE  reduce 45
	LT  reduce 45
	GE  reduce 45
	GT  reduce 45
	RPAREN  reduce 45
	SEMICOLON  reduce 45
	PERIOD  reduce 45


state 55
	term : factor .  (50)

	.  reduce 50


state 56
	factor : var_name .  (53)

	.  reduce 53


state 57
	read_statement : READ LPAREN . IDENT RPAREN  (36)

	IDENT  shift 81
	.  error


state 58
	while_statement : WHILE condition . DO statement  (31)

	DO  shift 82
	.  error


state 59
	write_statement : WRITE LPAREN . expression RPAREN  (37)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 83
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 60
	assignment_statement : IDENT ASSIGN . expression  (27)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 84
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 61
	subprog_decl_list : subprog_decl_list SEMICOLON subprog_decl .  (10)

	.  reduce 10


state 62
	inblock : var_decl_part . statement  (15)
	null_statement : .  (38)

	SBEGIN  shift 22
	FOR  shift 23
	IF  shift 24
	READ  shift 25
	WHILE  shift 26
	WRITE  shift 27
	IDENT  shift 28
	SEMICOLON  reduce 38

	statement  goto 85
	assignment_statement  goto 30
	if_statement  goto 31
	while_statement  goto 32
	for_statement  goto 33
	proc_call_statement  goto 34
	null_statement  goto 35
	block_statement  goto 36
	read_statement  goto 37
	write_statement  goto 38
	proc_call_name  goto 39


state 63
	proc_decl : PROCEDURE proc_name SEMICOLON inblock .  (13)

	.  reduce 13


state 64
	block_statement : SBEGIN statement_list SEND .  (35)

	.  reduce 35


state 65
	statement_list : statement_list SEMICOLON . statement  (16)
	null_statement : .  (38)

	SBEGIN  shift 22
	FOR  shift 23
	IF  shift 24
	READ  shift 25
	WHILE  shift 26
	WRITE  shift 27
	IDENT  shift 28
	SEND  reduce 38
	SEMICOLON  reduce 38

	statement  goto 86
	assignment_statement  goto 30
	if_statement  goto 31
	while_statement  goto 32
	for_statement  goto 33
	proc_call_statement  goto 34
	null_statement  goto 35
	block_statement  goto 36
	read_statement  goto 37
	write_statement  goto 38
	proc_call_name  goto 39


state 66
	for_statement : FOR IDENT ASSIGN . expression TO expression DO statement  (32)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 87
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 67
	expression : PLUS term .  (46)
	term : term . MULT factor  (51)
	term : term . DIV factor  (52)

	MULT  shift 79
	DIV  shift 80
	DO  reduce 46
	ELSE  reduce 46
	SEND  reduce 46
	THEN  reduce 46
	TO  reduce 46
	PLUS  reduce 46
	MINUS  reduce 46
	EQ  reduce 46
	NEQ  reduce 46
	LE  reduce 46
	LT  reduce 46
	GE  reduce 46
	GT  reduce 46
	RPAREN  reduce 46
	SEMICOLON  reduce 46
	PERIOD  reduce 46


state 68
	expression : MINUS term .  (47)
	term : term . MULT factor  (51)
	term : term . DIV factor  (52)

	MULT  shift 79
	DIV  shift 80
	DO  reduce 47
	ELSE  reduce 47
	SEND  reduce 47
	THEN  reduce 47
	TO  reduce 47
	PLUS  reduce 47
	MINUS  reduce 47
	EQ  reduce 47
	NEQ  reduce 47
	LE  reduce 47
	LT  reduce 47
	GE  reduce 47
	GT  reduce 47
	RPAREN  reduce 47
	SEMICOLON  reduce 47
	PERIOD  reduce 47


state 69
	expression : expression . PLUS term  (48)
	expression : expression . MINUS term  (49)
	factor : LPAREN expression . RPAREN  (55)

	PLUS  shift 70
	MINUS  shift 71
	RPAREN  shift 88
	.  error


state 70
	expression : expression PLUS . term  (48)

	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	term  goto 89
	factor  goto 55
	var_name  goto 56


state 71
	expression : expression MINUS . term  (49)

	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	term  goto 90
	factor  goto 55
	var_name  goto 56


state 72
	condition : expression EQ . expression  (39)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 91
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 73
	condition : expression NEQ . expression  (40)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 92
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 74
	condition : expression LE . expression  (42)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 93
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 75
	condition : expression LT . expression  (41)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 94
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 76
	condition : expression GE . expression  (44)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 95
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 77
	condition : expression GT . expression  (43)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 96
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 78
	if_statement : IF condition THEN . statement else_statement  (28)
	null_statement : .  (38)

	SBEGIN  shift 22
	FOR  shift 23
	IF  shift 24
	READ  shift 25
	WHILE  shift 26
	WRITE  shift 27
	IDENT  shift 28
	ELSE  reduce 38
	SEND  reduce 38
	SEMICOLON  reduce 38
	PERIOD  reduce 38

	statement  goto 97
	assignment_statement  goto 30
	if_statement  goto 31
	while_statement  goto 32
	for_statement  goto 33
	proc_call_statement  goto 34
	null_statement  goto 35
	block_statement  goto 36
	read_statement  goto 37
	write_statement  goto 38
	proc_call_name  goto 39


state 79
	term : term MULT . factor  (51)

	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	factor  goto 98
	var_name  goto 56


state 80
	term : term DIV . factor  (52)

	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	factor  goto 99
	var_name  goto 56


state 81
	read_statement : READ LPAREN IDENT . RPAREN  (36)

	RPAREN  shift 100
	.  error


state 82
	while_statement : WHILE condition DO . statement  (31)
	null_statement : .  (38)

	SBEGIN  shift 22
	FOR  shift 23
	IF  shift 24
	READ  shift 25
	WHILE  shift 26
	WRITE  shift 27
	IDENT  shift 28
	ELSE  reduce 38
	SEND  reduce 38
	SEMICOLON  reduce 38
	PERIOD  reduce 38

	statement  goto 101
	assignment_statement  goto 30
	if_statement  goto 31
	while_statement  goto 32
	for_statement  goto 33
	proc_call_statement  goto 34
	null_statement  goto 35
	block_statement  goto 36
	read_statement  goto 37
	write_statement  goto 38
	proc_call_name  goto 39


state 83
	write_statement : WRITE LPAREN expression . RPAREN  (37)
	expression : expression . PLUS term  (48)
	expression : expression . MINUS term  (49)

	PLUS  shift 70
	MINUS  shift 71
	RPAREN  shift 102
	.  error


state 84
	assignment_statement : IDENT ASSIGN expression .  (27)
	expression : expression . PLUS term  (48)
	expression : expression . MINUS term  (49)

	PLUS  shift 70
	MINUS  shift 71
	ELSE  reduce 27
	SEND  reduce 27
	SEMICOLON  reduce 27
	PERIOD  reduce 27


state 85
	inblock : var_decl_part statement .  (15)

	.  reduce 15


state 86
	statement_list : statement_list SEMICOLON statement .  (16)

	.  reduce 16


state 87
	for_statement : FOR IDENT ASSIGN expression . TO expression DO statement  (32)
	expression : expression . PLUS term  (48)
	expression : expression . MINUS term  (49)

	TO  shift 103
	PLUS  shift 70
	MINUS  shift 71
	.  error


state 88
	factor : LPAREN expression RPAREN .  (55)

	.  reduce 55


state 89
	expression : expression PLUS term .  (48)
	term : term . MULT factor  (51)
	term : term . DIV factor  (52)

	MULT  shift 79
	DIV  shift 80
	DO  reduce 48
	ELSE  reduce 48
	SEND  reduce 48
	THEN  reduce 48
	TO  reduce 48
	PLUS  reduce 48
	MINUS  reduce 48
	EQ  reduce 48
	NEQ  reduce 48
	LE  reduce 48
	LT  reduce 48
	GE  reduce 48
	GT  reduce 48
	RPAREN  reduce 48
	SEMICOLON  reduce 48
	PERIOD  reduce 48


state 90
	expression : expression MINUS term .  (49)
	term : term . MULT factor  (51)
	term : term . DIV factor  (52)

	MULT  shift 79
	DIV  shift 80
	DO  reduce 49
	ELSE  reduce 49
	SEND  reduce 49
	THEN  reduce 49
	TO  reduce 49
	PLUS  reduce 49
	MINUS  reduce 49
	EQ  reduce 49
	NEQ  reduce 49
	LE  reduce 49
	LT  reduce 49
	GE  reduce 49
	GT  reduce 49
	RPAREN  reduce 49
	SEMICOLON  reduce 49
	PERIOD  reduce 49


state 91
	condition : expression EQ expression .  (39)
	expression : expression . PLUS term  (48)
	expression : expression . MINUS term  (49)

	PLUS  shift 70
	MINUS  shift 71
	DO  reduce 39
	THEN  reduce 39


state 92
	condition : expression NEQ expression .  (40)
	expression : expression . PLUS term  (48)
	expression : expression . MINUS term  (49)

	PLUS  shift 70
	MINUS  shift 71
	DO  reduce 40
	THEN  reduce 40


state 93
	condition : expression LE expression .  (42)
	expression : expression . PLUS term  (48)
	expression : expression . MINUS term  (49)

	PLUS  shift 70
	MINUS  shift 71
	DO  reduce 42
	THEN  reduce 42


state 94
	condition : expression LT expression .  (41)
	expression : expression . PLUS term  (48)
	expression : expression . MINUS term  (49)

	PLUS  shift 70
	MINUS  shift 71
	DO  reduce 41
	THEN  reduce 41


state 95
	condition : expression GE expression .  (44)
	expression : expression . PLUS term  (48)
	expression : expression . MINUS term  (49)

	PLUS  shift 70
	MINUS  shift 71
	DO  reduce 44
	THEN  reduce 44


state 96
	condition : expression GT expression .  (43)
	expression : expression . PLUS term  (48)
	expression : expression . MINUS term  (49)

	PLUS  shift 70
	MINUS  shift 71
	DO  reduce 43
	THEN  reduce 43


97: shift/reduce conflict (shift 104, reduce 30) on ELSE
state 97
	if_statement : IF condition THEN statement . else_statement  (28)
	else_statement : .  (30)

	ELSE  shift 104
	SEND  reduce 30
	SEMICOLON  reduce 30
	PERIOD  reduce 30

	else_statement  goto 105


state 98
	term : term MULT factor .  (51)

	.  reduce 51


state 99
	term : term DIV factor .  (52)

	.  reduce 52


state 100
	read_statement : READ LPAREN IDENT RPAREN .  (36)

	.  reduce 36


state 101
	while_statement : WHILE condition DO statement .  (31)

	.  reduce 31


state 102
	write_statement : WRITE LPAREN expression RPAREN .  (37)

	.  reduce 37


state 103
	for_statement : FOR IDENT ASSIGN expression TO . expression DO statement  (32)

	PLUS  shift 47
	MINUS  shift 48
	LPAREN  shift 49
	NUMBER  shift 50
	IDENT  shift 51
	.  error

	expression  goto 106
	term  goto 54
	factor  goto 55
	var_name  goto 56


state 104
	else_statement : ELSE . statement  (29)
	null_statement : .  (38)

	SBEGIN  shift 22
	FOR  shift 23
	IF  shift 24
	READ  shift 25
	WHILE  shift 26
	WRITE  shift 27
	IDENT  shift 28
	ELSE  reduce 38
	SEND  reduce 38
	SEMICOLON  reduce 38
	PERIOD  reduce 38

	statement  goto 107
	assignment_statement  goto 30
	if_statement  goto 31
	while_statement  goto 32
	for_statement  goto 33
	proc_call_statement  goto 34
	null_statement  goto 35
	block_statement  goto 36
	read_statement  goto 37
	write_statement  goto 38
	proc_call_name  goto 39


state 105
	if_statement : IF condition THEN statement else_statement .  (28)

	.  reduce 28


state 106
	for_statement : FOR IDENT ASSIGN expression TO expression . DO statement  (32)
	expression : expression . PLUS term  (48)
	expression : expression . MINUS term  (49)

	DO  shift 108
	PLUS  shift 70
	MINUS  shift 71
	.  error


state 107
	else_statement : ELSE statement .  (29)

	.  reduce 29


state 108
	for_statement : FOR IDENT ASSIGN expression TO expression DO . statement  (32)
	null_statement : .  (38)

	SBEGIN  shift 22
	FOR  shift 23
	IF  shift 24
	READ  shift 25
	WHILE  shift 26
	WRITE  shift 27
	IDENT  shift 28
	ELSE  reduce 38
	SEND  reduce 38
	SEMICOLON  reduce 38
	PERIOD  reduce 38

	statement  goto 109
	assignment_statement  goto 30
	if_statement  goto 31
	while_statement  goto 32
	for_statement  goto 33
	proc_call_statement  goto 34
	null_statement  goto 35
	block_statement  goto 36
	read_statement  goto 37
	write_statement  goto 38
	proc_call_name  goto 39


state 109
	for_statement : FOR IDENT ASSIGN expression TO expression DO statement .  (32)

	.  reduce 32


State 97 contains 1 shift/reduce conflict.


40 terminals, 31 nonterminals
59 grammar rules, 110 states
